# rustyterm

./: Cargo.toml  README.md
.github/workflows/: release.yml
data/: rustyterm.desktop
releases/v0.1.0/: rustyterm_0.1.0-1_amd64.deb
src/: app.rs  config.rs  main.rs  resize.rs  tab.rs  terminal.rs  theme.rs  window.rs
